pgmemcache DEV
==============

* Return NULL when a set-related function returns MEMCACHED_BUFFERED to
  indicate that we don't really know the result of the action, but it wasn't
  an error

pgmemcache 2.2.0
================

* Support for MEMCACHED_BEHAVIOR_DEAD_TIMEOUT with libmemcached >= 1.0.3
* Changing default_servers now drops old servers from the list
* debian: new packaging to replace yada which is not available in
  Debian Wheezy anymore (Oskari Saarenmaa)
* Use pg_regress for make installcheck testing (Christoph Berg)
* Fix memory allocation (Mika Eloranta, Oskari Saarenmaa)

pgmemcache 2.1.2
================

* memcache_get_multi crash fixes (Maxim Kuzevanov)
* RPM packaging support
* Fix versioning when building without git (reported by Patryk Kordylewski)
* Code refactoring with minor fixes and consistent indentation and style

pgmemcache 2.1.1
================

* Fix errors and warnings exposed by GCC 4.8
* Make the memcache binary protocol the default
* Change memcache_incr and memcache_decr to use BIGINT arguments for the
  increment/decrement values (patch from Markus Holmberg / F-Secure)

pgmemcache 2.1.0
================

* CREATE EXTENSION support
* PostgreSQL 9.2 support
* Fix crashers on NULL inputs
* Fix a random initialization failure on startup, this fixes errors such as:
    """WARNING:  invalid value for parameter "pgmemcache.default_servers":
                 "example.org"
       ERROR: NO SERVERS DEFINED"""
* Compatibility with newer libmemcached versions
* Updated Debian packaging scripts

pgmemcache 2.0.6
================

* Fix building on earlier releases than 9.1 (reported by Florian Von Block)
* Add libsasl2-dev to build deps

pgmemcache 2.0.5
================

* Some preliminary work on SASL support
* Make pgmemcache work with PG 9.1
* Support for building debs against PG 9.0 and 9.1
* Move to GIT.
* Fix erroneous memory allocation get_multi (thanks iglue)

pgmemcache 2.0.4
================
